k8s/azure/mts-frontend-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mts-frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - 100001xx11x11xxx1xxx.westeurope.aksapp.io
  rules:
    - host: 100001xx11x11xxx1xxx.westeurope.aksapp.io
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: mts-frontend
                port:
                  number: 80
